--- a/24HWeather/Base.lproj/Main.storyboard
+++ b/24HWeather/Base.lproj/Main.storyboard
@@ -1,24 +1,108 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="_4HWeather" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="縣市" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ciq-wV-wmc">
+                                <rect key="frame" x="150" y="134" width="115" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="OLF-g7-JMk"/>
+                                    <constraint firstAttribute="width" constant="115" id="mH5-3l-d9g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日氣溫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4a-hS-plA">
+                                <rect key="frame" x="84" y="335" width="102" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="降雨機率" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dd2-GG-A7M">
+                                <rect key="frame" x="84" y="411" width="102" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="102" id="F6Q-3O-i4k"/>
+                                    <constraint firstAttribute="height" constant="30" id="hJW-0X-tjj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XX%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vht-z1-RcQ">
+                                <rect key="frame" x="194" y="411" width="137" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="clo-VF-vmi"/>
+                                    <constraint firstAttribute="width" constant="137" id="db8-k6-l44"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="時間" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zi7-Sh-6z9">
+                                <rect key="frame" x="0.0" y="237" width="414" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="XX～XX" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAa-Rm-F2h">
+                                <rect key="frame" x="194" y="335" width="137" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7fs-MU-gNY"/>
+                                    <constraint firstAttribute="width" constant="137" id="Y5T-NX-EMx"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                        <constraints>
+                            <constraint firstItem="ciq-wV-wmc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="3oB-vr-omf"/>
+                            <constraint firstItem="vht-z1-RcQ" firstAttribute="top" secondItem="xAa-Rm-F2h" secondAttribute="bottom" constant="46" id="6lU-BT-HQe"/>
+                            <constraint firstItem="zi7-Sh-6z9" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Gce-Ur-mEN"/>
+                            <constraint firstItem="ciq-wV-wmc" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="90" id="RGn-lh-kpq"/>
+                            <constraint firstItem="k4a-hS-plA" firstAttribute="top" secondItem="zi7-Sh-6z9" secondAttribute="bottom" constant="68" id="aop-Af-KGu"/>
+                            <constraint firstItem="zi7-Sh-6z9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b2Z-zJ-HgN"/>
+                            <constraint firstItem="zi7-Sh-6z9" firstAttribute="top" secondItem="ciq-wV-wmc" secondAttribute="bottom" constant="33" id="byg-3s-fiV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vht-z1-RcQ" secondAttribute="trailing" constant="83" id="cnU-gy-nnd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xAa-Rm-F2h" secondAttribute="trailing" constant="83" id="ikH-xj-G1d"/>
+                            <constraint firstItem="k4a-hS-plA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="84" id="o0E-yB-qas"/>
+                            <constraint firstItem="xAa-Rm-F2h" firstAttribute="top" secondItem="zi7-Sh-6z9" secondAttribute="bottom" constant="68" id="pRB-LC-0ZY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ciq-wV-wmc" secondAttribute="trailing" constant="149" id="sKa-NA-agc"/>
+                            <constraint firstItem="Dd2-GG-A7M" firstAttribute="top" secondItem="k4a-hS-plA" secondAttribute="bottom" constant="46" id="tA1-nl-3hx"/>
+                            <constraint firstItem="Dd2-GG-A7M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="84" id="zDC-aw-mm6"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cityLabel" destination="ciq-wV-wmc" id="A41-dH-kKO"/>
+                        <outlet property="popLabel" destination="vht-z1-RcQ" id="HHc-0u-QZO"/>
+                        <outlet property="temperatureLabel" destination="xAa-Rm-F2h" id="YhJ-Qu-7dJ"/>
+                        <outlet property="timeLabel" destination="zi7-Sh-6z9" id="7dM-nC-pF5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="113.04347826086958" y="82.366071428571431"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
